Fixed click fox spacing issue.

--- a/assets/css/projects/_clickfox.styl
+++ b/assets/css/projects/_clickfox.styl
@@ -6,3 +6,8 @@
 
   .project-section.web
     group()
+
+    .half
+      padding-bottom: 50px      
+      @media (max-width: 570px)
+        padding-bottom: 20px 
